--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-svg": "^15.7.1"
+    "react-native-svg": "^15.7.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
